######################################################################################
# Installation of headers
######################################################################################

#Only install one of the comm headers
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/lightstone/lightstone.h DESTINATION ${INCLUDE_INSTALL_DIR}/lightstone)
