SET(SRCS lightstone_libhid.c)
ADD_LIBRARY (lightstone STATIC ${SRCS})
ADD_LIBRARY (lightstone_dynamic SHARED ${SRCS})
SET_TARGET_PROPERTIES(lightstone PROPERTIES COMPILE_FLAGS "-DUSE_LIBHID")
SET_TARGET_PROPERTIES(lightstone_dynamic PROPERTIES COMPILE_FLAGS "-DUSE_LIBHID")
SET_TARGET_PROPERTIES (lightstone PROPERTIES CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES (lightstone_dynamic PROPERTIES OUTPUT_NAME "trancevibe")
SET_TARGET_PROPERTIES (lightstone_dynamic PROPERTIES CLEAN_DIRECT_OUTPUT 1)
TARGET_LINK_LIBRARIES(lightstone ${LIBUSBNAME} ${LIBHIDNAME})
TARGET_LINK_LIBRARIES(lightstone_dynamic ${LIBUSBNAME} ${LIBHIDNAME})


