INCLUDE_DIRECTORIES(../../src ${INC_DIRS})
LINK_DIRECTORIES(../../lib ${LINK_DIRS})
ADD_EXECUTABLE(lightstone_test lightstone_test.c)
SET_TARGET_PROPERTIES(lightstone_test PROPERTIES COMPILE_FLAGS "-DUSE_LIBHID")
TARGET_LINK_LIBRARIES(lightstone_test ${LIBUSBNAME} ${LIBHIDNAME} ${LIBLIGHTSTONENAME})
IF(NOT WIN32)
  INSTALL(TARGETS lightstone_test RUNTIME DESTINATION "/usr/local/bin")
ENDIF(NOT WIN32)
